--- a/roles/haproxy/templates/haproxy.cfg.j2
+++ b/roles/haproxy/templates/haproxy.cfg.j2
@@ -22,7 +22,7 @@ backend k8s_apiservers
         default-server inter 10s downinter 5s rise 2 fall 2 slowstart 60s maxconn 250 maxqueue 256 weight 100
 {% for host in groups['all'] %}
 {% if hostvars[host]['mode'] == 'master' %}
-        server {{ host }} hostvars[host]['ansible_host']:6443 check
+        server {{ host }} {{ hostvars[host]['ansible_host'] }}:6443 check
 
 {% endif %}
 {% endfor %}
